<resources>
    <string name="app_name">Alarm</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="repeat">Repeat</string>
    <string name="cancel">Cancel</string>
    <string name="edit_alarm">Edit Alarm</string>
    <string name="done">Done</string>
    <string name="none">None</string>
    <string name="sun">Sun</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="alert_mode">Alert Mode</string>
    <string name="ringtone">Ringtone</string>
    <string name="label">Label</string>
    <string name="ring">Ring</string>
    <string name="ring_vibrate"><![CDATA[Ring & Vibrate]]></string>
    <string name="vibrate">Vibrate</string>
    <string name="_5_minutes">5 Minutes</string>
    <string name="_10_minutes">10 Minutes</string>
    <string name="_15_minutes">15 Minutes</string>
    <string name="_30_minutes">30 Minutes</string>
    <string name="snooze">Snooze</string>
    <string name="add_alarm">Add Alarm</string>
    <string name="no_alarm">No Alarm</string>
    <string name="delete">Delete</string>
    <string name="am">AM</string>
    <string name="_1_minutes">1 Minutes</string>
    <string name="_1_hour">1 Hour</string>
    <string name="alarm_off">Alarm Off</string>
    <string name="_00_00">00:00</string>
    <string name="remind_later">Remind Later</string>
    <string name="alarm">Alarm</string>
    <string name="text_1">text 1</string>
    <string name="country">Country</string>
    <string name="gmt_00_00">GMT+00:00</string>
    <string name="time_zone">Time Zone</string>
    <string name="stopwatch">Stopwatch</string>
    <string name="timer">Timer</string>
</resources>